--- a/index.Rmd
+++ b/index.Rmd
@@ -42,16 +42,14 @@ library(knitcitations)
 ```
 
 ```{r xaringan-themer, include=FALSE, warning=FALSE}
-style_duo_accent(
-  primary_color = "#0061AF",
-  secondary_color = "#FFFFFF",
-  inverse_header_color = "#8DD3E0"
+style_mono_accent(
+  base_color = "#399cbd",
+  header_font_google = google_font("Josefin Sans"),
+  text_font_google   = google_font("Montserrat", "300", "300i"),
+  code_font_google   = google_font("Fira Mono")
 )
 
 ```
-
-class: inverse
-
 ## Summary: What is MODIS?
 
 - Moderate Resolution Imaging Spectroradiometer (MODIS) is a
